// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header hides search bar on other pages 1`] = `
<header
  class="sticky top-0 z-40 bg-gray-50"
>
  <div
    class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
  >
    <div
      class="h-16 grid grid-cols-[auto,1fr,auto] items-center"
    >
      <div
        class="flex flex-col"
      >
        <a
          class="flex shrink-0 items-center text-xl font-bold text-brand-dark"
          href="/"
        >
          Booka.co.za
        </a>
      </div>
      <nav
        class="hidden md:flex justify-center gap-6"
      >
        <a
          class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-primary text-gray-900"
          href="/artists"
        >
          Artists
        </a>
        <a
          class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
          href="/services"
        >
          Services
        </a>
        <a
          class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
          href="/faq"
        >
          FAQ
        </a>
        <a
          class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
          href="/contact"
        >
          Contact
        </a>
      </nav>
      <div
        class="hidden sm:flex items-center justify-end space-x-4"
      >
        <div
          class="space-x-4"
        >
          <a
            class="text-gray-500 hover:text-gray-700 px-3 py-2 text-sm font-medium"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="bg-brand-dark text-white hover:bg-brand-dark px-3 py-2 rounded-md text-sm font-medium"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
    </div>
    <div
      class="flex items-center sm:hidden"
    >
      <button
        class="-mr-2 ml-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-brand"
      >
        <span
          class="sr-only"
        >
          Open main menu
        </span>
        <svg
          aria-hidden="true"
          class="h-6 w-6"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
</header>
`;

exports[`Header renders search bar on home page 1`] = `
<header
  class="sticky top-0 z-40 bg-gray-50"
>
  <div
    class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
  >
    <div
      class="h-16 grid grid-cols-[auto,1fr,auto] items-center"
    >
      <div
        class="flex flex-col"
      >
        <a
          class="flex shrink-0 items-center text-xl font-bold text-brand-dark"
          href="/"
        >
          Booka.co.za
        </a>
        <span
          class="hidden sm:block -mt-0.5 text-[11px] leading-4 text-gray-600"
        >
          Book legendary artists
        </span>
      </div>
      <nav
        class="hidden md:flex justify-center gap-6"
      >
        <a
          class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
          href="/artists"
        >
          Artists
        </a>
        <a
          class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
          href="/services"
        >
          Services
        </a>
        <a
          class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
          href="/faq"
        >
          FAQ
        </a>
        <a
          class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
          href="/contact"
        >
          Contact
        </a>
      </nav>
      <div
        class="hidden sm:flex items-center justify-end space-x-4"
      >
        <div
          class="space-x-4"
        >
          <a
            class="text-gray-500 hover:text-gray-700 px-3 py-2 text-sm font-medium"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="bg-brand-dark text-white hover:bg-brand-dark px-3 py-2 rounded-md text-sm font-medium"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
    </div>
    <div
      class="flex items-center sm:hidden"
    >
      <button
        class="-mr-2 ml-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-brand"
      >
        <span
          class="sr-only"
        >
          Open main menu
        </span>
        <svg
          aria-hidden="true"
          class="h-6 w-6"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
    <div
      class="pb-3 pt-2"
    >
      <div
        class="relative"
      >
        <form
          class="flex items-stretch bg-white rounded-full ring-1 ring-gray-200 shadow-md overflow-visible min-h-[48px] text-sm mx-auto w-full md:max-w-2xl"
        >
          <div
            class="flex-1 px-4 flex flex-col text-left py-2"
          >
            <span
              class="text-xs text-gray-500"
            >
              Category
            </span>
            <div
              class="relative w-full"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="mt-1 w-full flex justify-between items-center text-sm text-gray-700 focus:outline-none"
                data-headlessui-state=""
                id="headlessui-listbox-button-:r0:"
                type="button"
              >
                <span>
                  Musician / Band
                </span>
                <svg
                  aria-hidden="true"
                  class="h-4 w-4 text-gray-400"
                  data-slot="icon"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m19.5 8.25-7.5 7.5-7.5-7.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="border-l border-gray-200"
          />
          <div
            class="flex-1 px-4 flex flex-col text-left py-2"
          >
            <span
              class="text-xs text-gray-500"
            >
              Where
            </span>
            <div
              class="relative"
            >
              <div
                class="w-full"
              >
                <div
                  class="mt-1 relative"
                >
                  <input
                    class="block w-full rounded-md border-gray-300 shadow-sm focus:border-brand focus:ring-brand sm:text-sm mt-1 w-full text-sm text-gray-700 placeholder-gray-400 focus:outline-none border-none shadow-none rounded-none bg-transparent p-0 focus:ring-0 pr-8"
                    data-testid="location-input"
                    id=":r1:"
                    placeholder="City or venue"
                  />
                </div>
              </div>
              <button
                class="absolute inset-y-0 right-1 flex items-center text-gray-500 hover:text-gray-700"
                data-testid="open-map-modal"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="h-5 w-5"
                  data-slot="icon"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                  <path
                    d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="border-l border-gray-200"
          />
          <div
            class="flex-1 px-4 flex flex-col text-left py-2"
          >
            <span
              class="text-xs text-gray-500"
            >
              When
            </span>
            <input
              class="mt-1 w-full text-sm text-gray-700 focus:outline-none"
              dateformat="MMM d, yyyy h:mm aa"
              placeholdertext="Add date & time"
            />
          </div>
          <button
            class="bg-pink-600 hover:bg-pink-700 text-white flex items-center justify-center h-full aspect-square md:w-12 md:h-auto"
            type="submit"
          >
            <svg
              aria-hidden="true"
              class="w-5 h-5"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <span
              class="sr-only"
            >
              Search
            </span>
          </button>
        </form>
        <div
          class="pointer-events-none absolute inset-x-6 -bottom-2 h-2 rounded-full bg-black/10 blur-md opacity-30"
        />
      </div>
    </div>
  </div>
  <div
    class="border-t border-gray-200"
  />
</header>
`;
